[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/mockup.png" type="Texture" id=1]
[ext_resource path="res://components/control_clickable.gd" type="Script" id=2]

[node name="in_play_clickable" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 709.116, 556.892, 295.613, 258.658 )

[node name="Control" type="Control" parent="."]
margin_left = -20.3848
margin_top = -21.3114
margin_right = 19.6152
margin_bottom = 18.6886
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="Control" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="Control" to="." method="_on_focus_exited"]
[connection signal="gui_input" from="Control" to="." method="_on_input_event"]
